# openfeature-haskell-example

./: .gitignore  cabal.project  flake.nix  haskell-openfeature-example.cabal  result
src/: Main.hs
