cabal-version:      3.0
name:               haskell-openfeature-example
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Juspay
maintainer:         superposition@juspay.in
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable haskell-openfeature-example
    import:           warnings
    -- other-modules:
    -- other-extensions:
    build-depends:    text >= 2.0 && < 2.2,
                      containers >= 0.6.0.1 && <= 0.9,
                      aeson >= 2.2.2.0 && < 2.3.0,
                      base >= 4.16 && < 4.22,
                      stm >= 2.5 && < 2.6,
                      monad-logger-aeson == 0.4.1.3,
                      open-feature,
                      superposition-open-feature-provider,
                      network-uri
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: OverloadedStrings,
                        ImportQualifiedPost,
                        DeriveGeneric,
                        DeriveFunctor,
                        DisambiguateRecordFields,
                        BangPatterns
